--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>My name is<b> Bonface Thuo Kamama</b>, i am a student at the<strong>Technical university of Mombasa</strong> .</p>
+        <p>Hello, I'm Bonface Thuo, a dedicated professional with a background in Mathematics and Computer Science. With a solid foundation from my Bachelor's degree and practical experience gained from collaborating with various companies, I bring a unique blend of analytical thinking and technical expertise to every project. .</p>
+        <p>My journey began with a passion for problem-solving, which led me to explore the intricate world of Mathematics and Computer Science. This academic pursuit equipped me with a rigorous approach to logic and algorithmic thinking, essential for tackling complex challenges in software development.</p>
+        <h3>Experties</h3>
+        <p>I am proficient in both front-end and back-end technologies, leveraging my skills to create seamless, user-centric web applications. My experience spans across [mention specific technologies or frameworks you're proficient in, e.g., HTML/CSS, JavaScript, React.js, Node.js, Python, Django, etc.], allowing me to architect robust solutions that meet both technical requirements and user expectations.</p>
+        <p>I am passionate about continuous learning and innovation, always seeking to expand my skill set and stay updated with industry trends. My goal is to leverage my technical proficiency and problem-solving prowess to contribute meaningfully to cutting-edge projects and drive impactful solutions.</p>
+        <p>I am excited to connect and explore opportunities where I can apply my expertise and contribute to transformative projects. Let's collaborate and create something exceptional together.</p>
     </section>
 
     <section id="projects">
