--- a/index.html
+++ b/index.html
@@ -17,7 +17,22 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <img src=""
         </nav>
+        <div class="music-bars">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
     </header>
 
     <section id="about">
@@ -25,7 +40,7 @@
         <p>Hello, I'm Bonface Thuo, a dedicated professional with a background in Mathematics and Computer Science. With a solid foundation from my Bachelor's degree and practical experience gained from collaborating with various companies, I bring a unique blend of analytical thinking and technical expertise to every project. .</p>
         <p>My journey began with a passion for problem-solving, which led me to explore the intricate world of Mathematics and Computer Science. This academic pursuit equipped me with a rigorous approach to logic and algorithmic thinking, essential for tackling complex challenges in software development.</p>
         <h3>Experties</h3>
-        <p>I am proficient in both front-end and back-end technologies, leveraging my skills to create seamless, user-centric web applications. My experience spans across [mention specific technologies or frameworks you're proficient in, e.g., HTML/CSS, JavaScript, React.js, Node.js, Python, Django, etc.], allowing me to architect robust solutions that meet both technical requirements and user expectations.</p>
+        <p>I am proficient in both front-end and back-end technologies, leveraging my skills to create seamless, user-centric web applications. My experience spans across  HTML/CSS, JavaScript, React.js, Node.js, Python, Django, allowing me to architect robust solutions that meet both technical requirements and user expectations.</p>
         <p>I am passionate about continuous learning and innovation, always seeking to expand my skill set and stay updated with industry trends. My goal is to leverage my technical proficiency and problem-solving prowess to contribute meaningfully to cutting-edge projects and drive impactful solutions.</p>
         <p>I am excited to connect and explore opportunities where I can apply my expertise and contribute to transformative projects. Let's collaborate and create something exceptional together.</p>
     </section>
