--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+         <div class="profile-image">
+        <img src="../images/tom.jpg" alt="Profile Image">
+    </div>
         <h1>My Portfolio</h1>
         <nav>
             <ul>
@@ -57,20 +60,33 @@
 
     <section id="skills">
         <h2>Skills</h2>
-        <p>i am a skilled deveoper in several languages and technologies which include:</p>
-        <ul>
-            <li>API bulding</li>
-            <li>front end development</li>
-            <li>python</li>
-            <li>app development with <b>Thunkabble</b></li>
-        </ul>
+        <p>I am a skilled developer in several languages and technologies which include:</p>
+        <div class="skill-cards">
+            <div class="skill-card">
+                <h3>API Building</h3>
+                <img src="../images/api.avif" alt="API Building">
+            </div>
+            <div class="skill-card">
+                <h3>Front End Development</h3>
+                <img src="../images/front.png" alt="Front End Development">
+            </div>
+            <div class="skill-card">
+                <h3>Python</h3>
+                <img src="../images/python.png" alt="Python">
+            </div>
+            <div class="skill-card">
+                <h3>App Development with <b>Thunkable</b></h3>
+                <img src="../images/app.jpg" alt="App Development with Thunkable">
+            </div>
+        </div>
     </section>
+    
 
     <section id="contact">
         <h2>Contact</h2>
         <p>you can reach to me through my social media hundles and also email:</p>
         <div class="social-media">
-            <a href="https://twitter.com/yourhandle" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+            <a href="https://twitter.com/yourhandle" target="_blank" class="twitter"><i class="fab fa-twitter"></i> Twitter</a>
             <a href="https://www.linkedin.com/in/yourhandle" target="https://www.linkedin.com/in/bonface-thuo-644722270?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i> LinkedIn</a>
             <a href="https://github.com/yourhandle" target="https://github.com/Bonface-3020"><i class="fab fa-github"></i> GitHub</a>
             <a href="https://www.instagram.com/yourhandle" target="https://www.instagram.com/alpha_bonnie_3020?igsh=MWN3YW5udHBidG1ybQ=="><i class="fab fa-instagram"></i> Instagram</a>
