--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <section id="skills">
         <h2>Skills</h2>
-        <p>I am a skilled developer in several languages and technologies which include:</p>
+        <p class="skill-set">I am a skilled developer in several languages and technologies which include:</p><br>
         <div class="skill-cards">
             <div class="skill-card">
                 <h3>API Building</h3>
@@ -86,10 +86,10 @@
         <h2>Contact</h2>
         <p>you can reach to me through my social media hundles and also email:</p>
         <div class="social-media">
-            <a href="https://twitter.com/yourhandle" target="_blank" class="twitter"><i class="fab fa-twitter"></i> Twitter</a>
-            <a href="https://www.linkedin.com/in/yourhandle" target="https://www.linkedin.com/in/bonface-thuo-644722270?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i> LinkedIn</a>
-            <a href="https://github.com/yourhandle" target="https://github.com/Bonface-3020"><i class="fab fa-github"></i> GitHub</a>
-            <a href="https://www.instagram.com/yourhandle" target="https://www.instagram.com/alpha_bonnie_3020?igsh=MWN3YW5udHBidG1ybQ=="><i class="fab fa-instagram"></i> Instagram</a>
+            <a href="https://twitter.com/yourhandle" class="social-button" target="_blank" class="twitter"><i class="fab fa-twitter"></i> Twitter</a>
+            <a href="https://www.linkedin.com/in/yourhandle"class="social-button" target="https://www.linkedin.com/in/bonface-thuo-644722270?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="https://github.com/yourhandle"class="social-button" target="https://github.com/Bonface-3020"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://www.instagram.com/yourhandle" class="social-button"target="https://www.instagram.com/alpha_bonnie_3020?igsh=MWN3YW5udHBidG1ybQ=="><i class="fab fa-instagram"></i> Instagram</a>
         </div>
 
     </section>
