--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/app.jpg" alt="app" class="d-block w-100">
+              <img src="images/carosel 2.png" alt="app" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="images/app.jpg" alt="app" class="d-block w-100">
+              <img src="images/carousel 1.jpeg" alt="app" class="d-block w-100">
             </div>
             <div class="carousel-item">
               <img src="images/app.jpg" alt="app" class="d-block w-100">
